--- a/src/services/COLP.Colporteur.API/appsettings.Development.json
+++ b/src/services/COLP.Colporteur.API/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ColpReport;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "MessageQueueConnection": {
+    "MessageBus":  "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
+  "AppSettings": {
+    "Secret": "COLPREPORTSECRETKEY",
+    "ExpirationInHours": "2",
+    "Issuer": "ColpReport",
+    "Audience": "https://localhost"
   }
 }
