--- a/src/services/COLP.Identity.API/appsettings.Development.json
+++ b/src/services/COLP.Identity.API/appsettings.Development.json
@@ -1,12 +1,15 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ColpReport;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ColpReport;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   },
   "AppSettings": {
     "Secret": "COLPREPORTSECRETKEY",
