--- a/src/web/package.json
+++ b/src/web/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
   },
@@ -20,6 +21,7 @@
     "@iconify-icon/react": "^1.0.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.0.1",
     "typescript": "^4.6.4",
