--- a/src/building blocks/COLP.WebAPI.Core/Properties/launchSettings.json
+++ b/src/building blocks/COLP.WebAPI.Core/Properties/launchSettings.json
@@ -7,6 +7,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:62842;http://localhost:62843"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
