--- a/src/services/COLP.Images.API/COLP.Images.API/COLP.Images.API.csproj
+++ b/src/services/COLP.Images.API/COLP.Images.API/COLP.Images.API.csproj
@@ -19,7 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application\Events\" />
     <Folder Include="Controllers\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
