--- a/src/building blocks/COLP.Core/COLP.Core.csproj
+++ b/src/building blocks/COLP.Core/COLP.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FluentValidation" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
   </ItemGroup>
 
 </Project>
