--- a/src/services/COLP.Images.API/COLP.Images.API/COLP.Images.API.csproj
+++ b/src/services/COLP.Images.API/COLP.Images.API/COLP.Images.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.15">
@@ -19,13 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Events\" />
     <Folder Include="Controllers\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\building blocks\COLP.Core\COLP.Core.csproj" />
+    <ProjectReference Include="..\..\..\building blocks\COLP.MessageBus\COLP.MessageBus.csproj" />
   </ItemGroup>
 
 </Project>
