--- a/src/services/COLP.Images.API/COLP.Images.API/appsettings.Development.json
+++ b/src/services/COLP.Images.API/COLP.Images.API/appsettings.Development.json
@@ -7,5 +7,14 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ColpReport;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
+  "AppSettings": {
+    "Secret": "COLPREPORTSECRETKEY",
+    "ExpirationInHours": "2",
+    "Issuer": "ColpReport",
+    "Audience": "https://localhost"
   }
 }
