--- a/src/services/COLP.User.API/COLP.Management.API.csproj
+++ b/src/services/COLP.User.API/COLP.Management.API.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\building blocks\COLP.Core\COLP.Core.csproj" />
+    <ProjectReference Include="..\..\building blocks\COLP.MessageBus\COLP.MessageBus.csproj" />
     <ProjectReference Include="..\COLP.Images.API\COLP.Images.API\COLP.Images.API.csproj" />
   </ItemGroup>
 
