FIX: Defining Goal in the process of saving Team.

--- a/src/services/COLP.Operation.API/Properties/launchSettings.json
+++ b/src/services/COLP.Operation.API/Properties/launchSettings.json
@@ -9,6 +9,13 @@
       },
       "applicationUrl": "https://localhost:7171;http://localhost:5171",
       "dotnetRunMessages": true
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
