--- a/src/services/COLP.Images.API/COLP.Images.API/Properties/launchSettings.json
+++ b/src/services/COLP.Images.API/COLP.Images.API/Properties/launchSettings.json
@@ -1,31 +1,23 @@
 ﻿{
+  "profiles": {
+    "COLP.Images.API": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:7171;http://localhost:5171",
+      "dotnetRunMessages": true
+    }
+  },
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:37220",
-      "sslPort": 44357
-    }
-  },
-  "profiles": {
-    "COLP.Images.API": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7171;http://localhost:5171",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      "applicationUrl": "http://localhost:37219",
+      "sslPort": 44356
     }
   }
 }
