--- a/src/services/COLP.Person.API/COLP.Person.API.csproj
+++ b/src/services/COLP.Person.API/COLP.Person.API.csproj
@@ -41,6 +41,7 @@
     <ProjectReference Include="..\..\building blocks\COLP.MessageBus\COLP.MessageBus.csproj" />
     <ProjectReference Include="..\..\building blocks\COLP.WebAPI.Core\COLP.WebAPI.Core.csproj" />
     <ProjectReference Include="..\COLP.Identity.API\COLP.Identity.API.csproj" />
+    <ProjectReference Include="..\COLP.Operation.API\COLP.Operation.API.csproj" />
   </ItemGroup>
 
 </Project>
