--- a/src/services/COLP.User.API/COLP.Management.API.csproj
+++ b/src/services/COLP.User.API/COLP.Management.API.csproj
@@ -30,6 +30,7 @@
     <ProjectReference Include="..\..\building blocks\COLP.Core\COLP.Core.csproj" />
     <ProjectReference Include="..\..\building blocks\COLP.MessageBus\COLP.MessageBus.csproj" />
     <ProjectReference Include="..\..\building blocks\COLP.WebAPI.Core\COLP.WebAPI.Core.csproj" />
+    <ProjectReference Include="..\COLP.Colporteur.API\COLP.Person.API.csproj" />
     <ProjectReference Include="..\COLP.Images.API\COLP.Images.API\COLP.Images.API.csproj" />
     <ProjectReference Include="..\COLP.Operation.API\COLP.Operation.API.csproj" />
   </ItemGroup>
