--- a/src/services/COLP.Colporteur.API/COLP.Person.API.csproj
+++ b/src/services/COLP.Colporteur.API/COLP.Person.API.csproj
@@ -33,6 +33,7 @@
     <ProjectReference Include="..\..\building blocks\COLP.MessageBus\COLP.MessageBus.csproj" />
     <ProjectReference Include="..\..\building blocks\COLP.WebAPI.Core\COLP.WebAPI.Core.csproj" />
     <ProjectReference Include="..\COLP.Identity.API\COLP.Identity.API.csproj" />
+    <ProjectReference Include="..\COLP.Images.API\COLP.Images.API\COLP.Images.API.csproj" />
     <ProjectReference Include="..\COLP.Operation.API\COLP.Operation.API.csproj" />
   </ItemGroup>
 
