FEATURE: Creating the interface and finalizing Wizard.

--- a/src/services/COLP.Identity.API/COLP.Identity.API.csproj
+++ b/src/services/COLP.Identity.API/COLP.Identity.API.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\..\building blocks\COLP.WebAPI.Core\COLP.WebAPI.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
